--- a/Hopfield Networks With Hebbian Learning.ipynb
+++ b/Hopfield Networks With Hebbian Learning.ipynb
@@ -1338,7 +1338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By increasing the bias, we can increase the capacity of the network. However, using a sparse network it is not guaranteed that the first few samples thought to the network will be stable points."
+    "By increasing the bias, we can increase the capacity of the network. However, using a sparse network it is not guaranteed that the first few samples taught to the network will be stable points."
    ]
   },
   {
